[gd_scene load_steps=23 format=4 uid="uid://bg1lvr4gpqck3"]

[ext_resource type="AudioStream" uid="uid://bpocrwqq6ftga" path="res://audio/import/footstep_concrete_000.ogg" id="1_mf2f2"]
[ext_resource type="Script" path="res://object/scripts/game/bokobody_audio_component.gd" id="1_qi8jb"]
[ext_resource type="AudioStream" uid="uid://jwqajj6r3ijf" path="res://audio/import/footstep_concrete_003.ogg" id="2_1xfqi"]
[ext_resource type="AudioStream" uid="uid://k7pm7b64t3oc" path="res://audio/import/error_004.ogg" id="2_24ky4"]
[ext_resource type="AudioStream" uid="uid://dh0nhf5fvnwjv" path="res://audio/import/footstep_concrete_004.ogg" id="3_bsc8o"]
[ext_resource type="AudioStream" uid="uid://b7i2ru8irnido" path="res://audio/import/block_turn_stopped_04.wav" id="4_jgy0d"]
[ext_resource type="AudioStream" uid="uid://uvsonmjvt8am" path="res://audio/import/block_moving_02.ogg" id="6_kb5fi"]
[ext_resource type="AudioStream" uid="uid://duxrvpqsutpsi" path="res://audio/import/block_moving.wav" id="7_e06n4"]
[ext_resource type="AudioStream" uid="uid://drs4uchj08t3h" path="res://audio/import/block_moving_03.ogg" id="8_ndws4"]
[ext_resource type="AudioStream" uid="uid://brmvthaahs7s0" path="res://audio/import/block_moving_04.ogg" id="9_djkx0"]
[ext_resource type="AudioStream" uid="uid://c4cdbcvyxs8qn" path="res://audio/import/tone1.ogg" id="10_6ii0b"]
[ext_resource type="AudioStream" uid="uid://ikv3u8jsigyf" path="res://audio/import/block_turning_01.ogg" id="11_fpyac"]
[ext_resource type="AudioStream" uid="uid://c7wwwgcsodnem" path="res://audio/import/block_turning_02.ogg" id="12_1t5pe"]
[ext_resource type="AudioStream" uid="uid://qrwluwrct4wg" path="res://audio/import/block_turning_06.ogg" id="13_80qm5"]
[ext_resource type="AudioStream" uid="uid://ddyjyrrq7goac" path="res://audio/import/block_turning_08.ogg" id="14_wcqdl"]
[ext_resource type="AudioStream" uid="uid://dt1sv4dgsehol" path="res://audio/import/block_turning_09.ogg" id="15_yfp4d"]
[ext_resource type="AudioStream" uid="uid://b7yxur4l15nuk" path="res://audio/import/block_turning_05.wav" id="16_ssitn"]
[ext_resource type="AudioStream" uid="uid://x6tuwxxh3o2d" path="res://audio/import/block_turning_07.wav" id="17_lydpi"]
[ext_resource type="AudioStream" uid="uid://clyql63anqjpd" path="res://audio/import/error_007.ogg" id="19_e1y5m"]
[ext_resource type="AudioStream" uid="uid://3iyykkm2ueb5" path="res://audio/import/block_turning_sound.ogg" id="21_w2mde"]

[sub_resource type="OggPacketSequence" id="OggPacketSequence_mn0p0"]
packet_data = Array[Array]([[PackedByteArray("AXZvcmJpcwAAAAACRKwAAAAAAAAAcQIAAAAAALgB")], [PackedByteArray("A3ZvcmJpcysAAABYaXBoLk9yZyBsaWJWb3JiaXMgSSAyMDEyMDIwMyAoT21uaXByZXNlbnQpAgAAAA0AAABBUlRJU1Q9S2VubmV5RwAAAENPTU1FTlRTPVNvdW5kIGdlbmVyYXRlZCBieSBHYW1lU3ludGggZnJvbSBUc3VnaSAod3d3LnRzdWdpLXN0dWRpby5jb20pAQ=="), PackedByteArray("BXZvcmJpcylCQ1YBAAgAAAAxTCDFgNCQVQAAEAAAYCQpDpNmSSmllKEoeZiUSEkppZTFMImYlInFGGOMMcYYY4wxxhhjjCA0ZBUAAAQAgCgJjqPmSWrOOWcYJ45yoDlpTjinIAeKUeA5CcL1JmNuprSma27OKSUIDVkFAAACAEBIIYUUUkghhRRiiCGGGGKIIYcccsghp5xyCiqooIIKMsggg0wy6aSTTjrpqKOOOuootNBCCy200kpMMdVWY669Bl18c84555xzzjnnnHPOCUJDVgEAIAAABEIGGWQQQgghhRRSiCmmmHIKMsiA0JBVAAAgAIAAAAAAR5EUSbEUy7EczdEkT/IsURM10TNFU1RNVVVVVXVdV3Zl13Z113Z9WZiFW7h9WbiFW9iFXfeFYRiGYRiGYRiGYfh93/d93/d9IDRkFQAgAQCgIzmW4ymiIhqi4jmiA4SGrAIAZAAABAAgCZIiKZKjSaZmaq5pm7Zoq7Zty7Isy7IMhIasAgAAAQAEAAAAAACgaZqmaZqmaZqmaZqmaZqmaZqmaZpmWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWUBoyCoAQAIAQMdxHMdxJEVSJMdyLAcIDVkFAMgAAAgAQFIsxXI0R3M0x3M8x3M8R3REyZRMzfRMDwgNWQUAAAIACAAAAAAAQDEcxXEcydEkT1It03I1V3M913NN13VdV1VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVWB0JBVAAAEAAAhnWaWaoAIM5BhIDRkFQCAAAAAGKEIQwwIDVkFAAAEAACIoeQgmtCa8805DprloKkUm9PBiVSbJ7mpmJtzzjnnnGzOGeOcc84pypnFoJnQmnPOSQyapaCZ0JpzznkSmwetqdKac84Z55wOxhlhnHPOadKaB6nZWJtzzlnQmuaouRSbc86JlJsntblUm3POOeecc84555xzzqlenM7BOeGcc86J2ptruQldnHPO+WSc7s0J4ZxzzjnnnHPOOeecc84JQkNWAQBAAAAEYdgYxp2CIH2OBmIUIaYhkx50jw6ToDHIKaQejY5GSqmDUFIZJ6V0gtCQVQAAIAAAhBBSSCGFFFJIIYUUUkghhhhiiCGnnHIKKqikkooqyiizzDLLLLPMMsusw84667DDEEMMMbTSSiw11VZjjbXmnnOuOUhrpbXWWiullFJKKaUgNGQVAAACAEAgZJBBBhmFFFJIIYaYcsopp6CCCggNWQUAAAIACAAAAPAkzxEd0REd0REd0REd0REdz/EcURIlURIl0TItUzM9VVRVV3ZtWZd127eFXdh139d939eNXxeGZVmWZVmWZVmWZVmWZVmWZQlCQ1YBACAAAABCCCGEFFJIIYWUYowxx5yDTkIJgdCQVQAAIACAAAAAAEdxFMeRHMmRJEuyJE3SLM3yNE/zNNETRVE0TVMVXdEVddMWZVM2XdM1ZdNVZdV2Zdm2ZVu3fVm2fd/3fd/3fd/3fd/3fd/XdSA0ZBUAIAEAoCM5kiIpkiI5juNIkgSEhqwCAGQAAAQAoCiO4jiOI0mSJFmSJnmWZ4maqZme6amiCoSGrAIAAAEABAAAAAAAoGiKp5iKp4iK54iOKImWaYmaqrmibMqu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67pAaMgqAEACAEBHciRHciRFUiRFciQHCA1ZBQDIAAAIAMAxHENSJMeyLE3zNE/zNNETPdEzPVV0RRcIDVkFAAACAAgAAAAAAMCQDEuxHM3RJFFSLdVSNdVSLVVUPVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVdU0TdM0gdCQlQAAGQAA5KSm1HoOEmKQOYlBaAhJxBzFXDrpnKNcjIeQI0ZJ7SFTzBAEtZjQSYUU1OJaah1zVIuNrWRIQS22xlIh5agHQkNWCAChGQAOxwEcTQMcSwMAAAAAAAAASdMATRQBzRMBAAAAAAAAwNE0QBM9QBNFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcTQM0UQQ0UQQAAAAAAAAATRQB0VQB0TQBAAAAAAAAQBNFwDNFQDRVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcTQM0UQQ0UQQAAAAAAAAATRQBUTUBTzQBAAAAAAAAQBNFQDRNQFRNAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAQ4AAAEWQqEhKwKAOAEAh+NAkiBJ8DSAY1nwPHgaTBPgWBY8D5oH0wQAAAAAAAAAAABA8jR4HjwPpgmQNA+eB8+DaQIAAAAAAAAAAAAgeR48D54H0wRIngfPg+fBNAEAAAAAAAAAAADwTBOmCdGEagI804RpwjRhqgAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAACAAQcAgAATykChISsCgDgBAIejSBIAADiSZFkAAKBIkmUBAIBlWZ4HAACSZXkeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAIABBwCAABPKQKEhKwGAKAAAh6JYFnAcywKOY1lAkiwLYFkATQN4GkAUAYAAAIACBwCAABs0JRYHKDRkJQAQBQDgcBTL0jRR5DiWpWmiyHEsS9NEkWVpmqaJIjRL00QRnud5pgnP8zzThCiKomkCUTRNAQAABQ4AAAE2aEosDlBoyEoAICQAwOE4luV5oiiKpmmaqspxLMvzRFEUTVNVXZfjWJbniaIomqaqui7L0jTPE0VRNE1VdV1omueJoiiapqq6LjRNFE3TNFVVVV0XmuaJpmmaqqqqrgvPE0XTNE1VdV3XBaJomqapqq7rukAUTdM0VdV1XReIomiapqq6rusC0zRNVVVd15VlgGmqqqq6riwDVFVVXdeVZRmgqqrquq4rywDXdV3ZlWVZBuC6rivLsiwAAODAAQAgwAg6yaiyCBtNuPAAFBqyIgCIAgAAjGFKMaUMYxJCCqFhTEJIIWRSUioppQpCKiWVUkFIpaRSMkotpZZSBSGVkkqpIKRSUikFAIAdOACAHVgIhYasBADyAAAIY5RizDnnJEJKMeaccxIhpRhzzjmpFGPOOeeclJIx55xzTkrJmHPOOSelZMw555yTUjrnnHMOSimldM4556SUUkLonHNSSimdc845AQBABQ4AAAE2imxOMBJUaMhKACAVAMDgOJalaZ4niqZpSZKmeZ4nmqZpapKkaZ4niqZpmjzP80RRFE1TVXme54miKJqmqnJdURRN0zRNVSXLoiiKpqmqqgrTNE3TVFVVhWmapmmqquvCtlVVVV3XdWHbqqqqruu6wHVd13VlGbiu67quLAsAAE9wAAAqsGF1hJOiscBCQ1YCABkAAIQxCCmEEFIGIaQQQkgphZAAAIABBwCAABPKQKEhKwGAcAAAgBCMMcYYY4wxNoxhjDHGGGOMMXEKY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHG2FprrbVWABjOhQNAWYSNM6wknRWOBhcashIACAkAAIxBiDHoJJSSSkoVQow5KCWVllqKrUKIMQilpNRabDEWzzkHoaSUWooptuI556Sk1FqMMcZaXAshpZRaiy22GJtsIaSUUmsxxlpjM0q1lFqLMcYYayxKuZRSa7HFGGuNRSibW2sxxlprrTUp5XNLsdVaY6y1JqOMkjHGWmustdYilFIyxhRTrLXWmoQwxvcYY6wx51qTEsL4HlMtsdVaa1JKKSNkjanGWnNOSglljI0t1ZRzzgUAQD04AEAlGEEnGVUWYaMJFx6AQkNWAgC5AQAIQkoxxphzzjnnnHMOUqQYc8w55yCEEEIIIaQIMcaYc85BCCGEEEJIGWPMOecghBBCCKGEklLKmHPOQQghhFJKKSWl1DnnIIQQQiillFJKSqlzzkEIIYRSSimllJRSCCGEEEIIpZRSSikppZRCCCGEEkoppZRSUkophRBCCKWUUkoppaSUUgohhBBKKaWUUkpJKaUUQgmllFJKKaWUklJKKaUQSimllFJKKSWllFJKpZRSSimllFJKSimllEoppZRSSimllJRSSimVUkoppZRSSikppZRSSqmUUkoppZRSUkoppZRSKaWUUkoppaSUUkoppVJKKaWUUkpJKaWUUkqllFJKKaWUklJKKaWUUiqllFJKKaUAAKADBwCAACMqLcROM648AkcUMkxAhYasBADIAAAQB7G01lqrjHLKSUmtQ0Ya5qCk2EkHIbVYS2UgQcpJSp2CCCkGqYWMKqWYk5ZCy5hSDGIrMXSMMUc55VRCxxgAAACCAAADETITCBRAgYEMADhASJACAAoLDB3DRUBALiGjwKBwTDgnnTYAAEGIzBCJiMUgMaEaKCqmA4DFBYZ8AMjQ2Ei7uIAuA1zQxV0HQghCEIJYHEABCTg44YYn3vCEG5ygU1TqQAAAAAAAHgDgAQAg2QAiIqKZ4+jw+AAJERkhKTE5QREAAAAAADsA+AAASFKAiIho5jg6PD5AQkRGSEpMTlACAAABBAAAAABAAAEICAgAAAAAAAQAAAAICA==")], [PackedByteArray("TJJ3Qm1zCoBJ8k6obU4B8AHIJ0hOptVQAhCVxuVyBCCoKtaJglqqfJOmq06dFkRRsGg0Yh/ya41GQUSIdKNYVi5gBVYRVafW08KqUTQK"), PackedByteArray("/IVfIdIuEy6Kz0TAX/gVIu0y4aL4TAScdbKMoFhrS5CRIlZABMXSmootsYit1WCNoAGt2gJsAmug1akDASzBtCboACuAiug0olPAYo0qqgZRlVzmMsrQkuvJBQ=="), PackedByteArray("5FFfS+wfkykinGBKHvW1xP4xmSLCCab0Zl+2Lo+MFGDY2ygY9oIVSyyxAQsUGw2sFbQiWFNEFENUbEYRrBEUHSrWTFUMBKxDsCgYrPHrvtWGfBk="), PackedByteArray("2jcNPJB4LZlvfEmx191Sxp3x900DDyReS+YbX1LsdbeUcWf8R9s5bK8HAJCGBdEAABANAEC6DVg4sLFwECwsNrCwpg32PEVAXHuKmJhTmTAQMBOQAGDY2tnZ29tbVC12VuyskQChJIZpmIZpWC22YmcaKkAWAGQBgNhaVBQAAFBRUVHDNKw2VrUBUVExLVbTam+YIioqpsXGBABMi629YjENFQUQl5ISFxMVERYRlyZNTEqSY7Coilaj1Wg1Wo12q5M1JZRwGXFhDgMAAPAmlPCEuTyWUEIJJVQsBgDEomq2KuTCG8g551uAnPOtpQ02qqgoAAAAqKiomBbWDY0qFosBAIuKihqmYWnFRrXJuhWtoioWiwUA4AtgbbGiKmg1qlgsAOScby2t2GiDCQAAAKKioqKGaWHVBputKAAAAAAAAKJq1M8CQOTSAJs535artQoAYkWrqGKxWHABZutWVut3V4XZutUJ8PX5s8vX588u9ADWWxU="), PackedByteArray("9vbM14vELEZ/+WHnrTsNYMHm7ZmvF4lZjP7yw85bdxrAgs1RoN8HAEidQEbdigDRAAAQIQCAuKnUjQSArwAAxwggqnXK4BgAkTUlIG4DALinDQB6jwAAENU61UBMJDGxGIsxMzMTAABsLSioaVpt7e3EVAAyWgvGWmtVjQWjIgJEBYCSAAAGFAAAAJAlAQCsYowCAGpRNQBA1ABgtbdVqwAAAAAAgFhtraYVAQAAAABARVRFJcXFhQX5gny+oJg0DhUQUUTAVlVVq9VqtdqVAEIIEWAZVkSYUkopBUskeSJCACGEEEIiAOIOAAAAoHwBlidmAwgAAIAAFIywuAQrSAgAAMAoKMBXBSAAsbRmSxtMBIAT+GqUAEDzuwOoEtmEv25TkbXz+GLTCav5NvMla+faCeMcJ0GClIpqomtn8S7oGEzSTDPEn9hYe1QB"), PackedByteArray("XB1/9Mc89o7yhbiNq6vjj/6Yx95RvhC3cZUcuWjJMcYI2NkbKmpn3674QMVoyD67Gc+5i5SSiR+zPPpS"), PackedByteArray("/EmvGsNOCAMQ8ie9agw7IQxASL/fZ+SCI8OkWMSwsYphIyK2qlUtikZRBKtarWpRbtLus/y+kVNUrVZFFEVRRLCq1aooGo0ia/de6fti/q+A3QM="), PackedByteArray("HIqvw56aAMSAQ/F12FMTgBhwa2olZW4jJyMnRTFiBRFFY2utsQLWilFBFVWjAUWxCApasKhWsEZRFQ2oGLlXf84/6o9Y6J73iRc0iZcA"), PackedByteArray("3HlfRzwbM4wI2ZDeeV9HPBszjAjZkPZmTwjmJRJkyNbe3kbUEBMbFdMmI0mnRYMVDRodBg1oBUtrgoA1oGpAp2IREIuqQdB5nUULCPiWfSqUAQ=="), PackedByteArray("3DV/YD3tOpNslCE6+LvmD6ynXWeSjTJEB3/WVUTKSCSzIbEEAhhVI1YMwU4FFSwMDCvWUTAanWT1h80ghimWAjrFGu1XBBYjOhXQWMAanShaRFW4vHkD"), PackedByteArray("OgfdtCnd93Z6ryCFpfrvdZrqPwfdtCnd93Z6ryCFpfrvdZrq/1xbKYuyqBapjKxUAQB8aiKADJEBgCgr1SimuIgFiNmRmFgKEzuIETCDxZgwkgQAoGpUjRorRq01iAwAUUONiqioMdZaY1VAVFRQY9RiJcWFhEUFuIQyXCFhYRGuRrVBAEAsqqIqqmJFq9ga1VIAQFZRw9LCqhXrFlhaiGmucAD5Kp/SRVtYW1RFqxjFFmzZteW+uy4vtfRJPmdufni8V2u9u+tC1agiKootYiM45+vKW+BLaau1q+Ts3RuLFVWjVVTBYi/I+mIHADJbtUkQOZe3t3k1MmQCar27k/DINDe3GmWA+/nz53Uuzenq12fu7WVr7teu1vrd3XV1nBT6/uxOd2suc84AA+AE"), PackedByteArray("fobc2Dyfb409j9f6eDzoz1teJM6QG5vn862x5/FaH48H/XnLi8QBaPsGAADBpd0HC6vdXsGCBanE2IHZgVmMmcWYmUkAgGFrY2tjNUwDqwWxgUYCgAoKKBimoVhsbSximGoRFAC1s6haLaZpZ28RwEZrhqUVq9ZstGbdimJYiiiHy5HkghIKQgkFgIqNFgCoABpghiKmiHWbTBuxYsXCEBhFLK1YtWbVAksLsTTJAMmKVjFgRacOqxq5jwRA8N3ddVFu6YD3eutXzu+Tsr+7u7u7uyhriOFka+5XM89rc+vW3Ez1ZX9d3N7eeneSFzOFTKD5tWHrVqc7rpEztfvsNsk635m8Mzdig5HkJeY+/Zw3QjMCO2OVrX3Gu8DpfBPPj7WSzpdt1+BIubgE"), PackedByteArray("3kW0l0XC5plveBHC7R0hpEhHXUR7WSRsnvmGFyHc3hFCinR0BxBAzw8AACCLmoQXKCv1AojbAAC+AQBagHSvBxCl1+slCBvTTghLXE4njEwYmVnMgVmMmZkEoBYLqlYxRQVRTNQQBdRQq9UwyZIAAADBgAgAYAxYAwAAMioAICOjib0AAABgb1FsBQAAsNpbTCxiBwCAKIatvY2tYdgArIiImBhLAQAAAIBas1EUAACAEiIoJiYsIsIAOAEAABDKikiI8rgEAAAAKzqBNQCCGpaGaVhaMzUAAIAKKlhas9GadRtstgVWAQAAAESuMt9qAd6fV1PgCH93d11kk7P2jqgPwxq1V1DuOlxYDXO5uVVPBBa3HDnZGbLufjWf46GRoDPtwBYpQMfP0mO+tF+vPNtQl2zkVMConwFQCAA="), PackedByteArray("HlYE+/MKpN/HoEvCfoCwIKwI9ucVSL+PQZeE/QBhwR2DXUDbW9bWQwKACV6QWSMBC4d+jxdARETW1pSOiCQswhRbICYmxszMzA5iYkySAAy1sbexMTBNq52tndXOYoidiGGamGpnmFhjjTVG1aoixhgCCljVNEUA1IqoYEQBAFSt9gY2NhY1AEDEWIyIFQuAWNqkAgAH2GCjFRUBQAGAtfaHDmt1aAUAAGBWErU0rYiNNlk1AEAQVDGwaoONVkwBAADBKKqmbADAyAfTinVrlgYoKoDuduFnq58c/NzPDzM04Vq+23wBQF70vrXz2i8DeUG78Jlhts1P8a7xPZqTjKRGL5B3ozp9Z16dRt8iYMyUIRHwCRGuOZc7mxyrdsEZM+sPtVN8kRhAAA=="), PackedByteArray("vmWE6+edmXVtfCALwZYRrp93Zta18YEsBBfbC9PeUlI5EM9U7CDmQMzMzMzMJDMAAFEsdmrY2opha29nb9XA0pp1a1YNBVRMKzbaZEsbrFuYiKUVq1ZMEVWjKhasaBULFitajVYxYIDcr89rIxaLQdVoFdS7LnKmVvJ1m/PkKvfVyPn9ef2utUYuXRVVMVjRalTFYlHFYkVVsKLVGFEVVbCiKkZURau59Tpyzu/Mzf3nyf2q5NK7q3HlfXdd3Jb77uS63WduOmtXI3u1Sr4tvery2b1uM7WScz+7zq9Mvj6vc9/umsy1fmYrbL3Pwpe7qdlR1lth630eJ8BsJXNy37JVPwvQfGcCm87P7lZl61Y4AWjCZxc=")]])
granule_positions = PackedInt64Array(0, 0, 7257)
sampling_rate = 44100.0

[sub_resource type="AudioStreamOggVorbis" id="AudioStreamOggVorbis_y6inb"]
packet_sequence = SubResource("OggPacketSequence_mn0p0")

[node name="BokobodyAudioComponent" type="Node2D"]
script = ExtResource("1_qi8jb")

[node name="TurnHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_24ky4")
volume_db = -20.0
panning_strength = 2.0
bus = &"GameSound"

[node name="MoveHit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_mf2f2")
panning_strength = 2.0
bus = &"GameSound"

[node name="MoveHit3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_1xfqi")
panning_strength = 2.0
bus = &"GameSound"

[node name="MoveHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bsc8o")
volume_db = -20.0
panning_strength = 2.0
bus = &"GameSound"

[node name="BlockMoving01" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_kb5fi")
bus = &"GameSound"

[node name="BlockMoving02" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_e06n4")
volume_db = -30.0
bus = &"GameSound"

[node name="BlockMoving03" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ndws4")
bus = &"GameSound"

[node name="BlockMoving04" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_djkx0")
bus = &"GameSound"

[node name="BlockMoving" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_6ii0b")
volume_db = -45.0
pitch_scale = 0.8
bus = &"GameSound"

[node name="BlockTurn01" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_fpyac")
bus = &"GameSound"

[node name="BlockTurn02" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_1t5pe")
bus = &"GameSound"

[node name="BlockTurn03" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_80qm5")
bus = &"GameSound"

[node name="BlockTurn04" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_wcqdl")
bus = &"GameSound"

[node name="BlockTurn05" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_yfp4d")
bus = &"GameSound"

[node name="BlockTurn06" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_ssitn")
volume_db = -20.0
bus = &"GameSound"

[node name="BlockTurn07" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_lydpi")
volume_db = -20.0
bus = &"GameSound"

[node name="BlockTurningStopped" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jgy0d")
bus = &"GameSound"

[node name="BlockTurningStopped02" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_e1y5m")
bus = &"GameSound"

[node name="BlockTurningStopped03" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamOggVorbis_y6inb")
bus = &"GameSound"

[node name="BlockTurningSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_w2mde")
volume_db = -30.0
bus = &"GameSound"
